--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,7 +16,7 @@ body {
 }
 /* HEADER */
 header {
-  background: url(../img/fondo.png);
+  background: url(../img/fondo.png) black;
   background-repeat: no-repeat;
   background-position: center;
   max-height: 600px;
